Horizontal scroll fixed

--- a/RunningApp/resources/assets/sass/_profile.scss
+++ b/RunningApp/resources/assets/sass/_profile.scss
@@ -1,7 +1,9 @@
 .profile_content{
   display: table;
-  width: 100%;
+  width: 90%;
+
 }
+
 
 .profile_header{
   margin-top: 20px;
