--- a/RunningApp/resources/assets/sass/app.scss
+++ b/RunningApp/resources/assets/sass/app.scss
@@ -62,7 +62,8 @@ a{
 
 .container{
  width: 90%;
- margin: auto;
+ margin-left:5% ;
+ margin-right: 5%;
  margin-top: -3em;
 }
 
